CardFactory.createObjectiveCard() finished, entire class finished and all the 102 cards are createable